--- a/package.json
+++ b/package.json
@@ -42,24 +42,24 @@
     "url": "git://github.com/blue-button/bluebutton.js.git"
   },
   "scripts": {
-    "build": "webpack --display-modules",
+    "build": "webpack",
     "test": "grunt test"
   },
   "dependencies": {
-    "lodash": "^4.17.5",
-    "xmldom": "~0.1.19"
+    "lodash": "^4.17.21",
+    "xmldom": "^0.5.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0",
     "webpack-fix-default-import-plugin": "^1.0.3",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^2.5.2"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=14.15.1"
   },
   "license": "MIT"
 }
